Fix stretched image bug on iOS

--- a/src/assets/sass/_gallery.scss
+++ b/src/assets/sass/_gallery.scss
@@ -6,7 +6,6 @@
 
   > img {
     width: 100%;
-    height: 100%;
     transition: 0.15s;
     cursor: pointer;
   }
